# aiserver

./: MOCK_DATA.csv  pyproject.toml  test.txt  usage.ipynb
app/: main.py
app/paragraph/: notes.ipynb
app/qa/: __init__.py  notes.ipynb
app/tutorials/llm/: Ollama.ipynb  OpenAI.ipynb
app/tutorials/prompt/: basic.ipynb
app/tutorials/rag/: LCEL.ipynb  output.ipynb  prompt.ipynb  qa.ipynb  withRetrive.ipynb
app/tutorials/retrive/: basic.ipynb  cachestore.ipynb
app/utils/: routes.py
