[tool.poetry]
name = "aiservice"
version = "0.1.0"
description = ""
authors = ["mxm <mxm.web.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["all"], version = "^0.2.2"}
fastapi = "^0.111.0"
langchain = "^0.2.5"
apscheduler = "^3.10.4"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
