[tool.poetry]
name = "aiservice"
version = "0.1.0"
description = ""
authors = ["mxm <mxm.web.develop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langserve = {extras = ["all"], version = "^0.2.2"}
fastapi = "^0.111.0"
langchain = {extras = ["all"], version = "^0.2.6"}
apscheduler = "^3.10.4"
uuid = "^1.30"
langchain-openai = "^0.1.10"
ipykernel = "^6.29.4"
langchain-community = "^0.2.6"
chroma = "^0.2.0"
langchain-chroma = "^0.1.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
